menambah Path pada urls.py

--- a/absensi/templates/base.html
+++ b/absensi/templates/base.html
@@ -1,4 +1,4 @@
-{% load static%}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -38,7 +38,7 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon rotate-n-0">
-                    <img src="static/img/logo_smaker.png" alt="">
+                    <img src="{% static 'img/logo_smaker.png' %}" alt="">
                 </div>
                 <div class="sidebar-brand-text mx-3">SMAKER<sup> Malang</sup></div>
             </a>
