--- a/absensi/templates/biodata.html
+++ b/absensi/templates/biodata.html
@@ -1,8 +1,8 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 {% load static %}
 {% block content%}
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Biodata</h1>
+        <h1 class="h3 mb-0 text-gray-800">Biodata Guru</h1>
         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                 class="fas fa-download fa-sm text-white-50"></i> Tambah Data </a>
     </div>
