--- a/absensi/templates/base.html
+++ b/absensi/templates/base.html
@@ -48,7 +48,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="/">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -72,7 +72,7 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Pilihan :</h6>
-                        <a class="collapse-item" href="data_guru.html">Data guru</a>
+                        <a class="collapse-item" href="/biodata/">Data guru</a>
                         <a class="collapse-item" href="perizinan.html">Data perizinan</a>
                         <a class="collapse-item" href="absensi.html">Data Absensi</a>
                         <div class="collapse-divider"></div>
