perizinan masih error

--- a/absensi/templates/base.html
+++ b/absensi/templates/base.html
@@ -72,12 +72,13 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Pilihan :</h6>
-                        <a class="collapse-item" href="/biodata/">Data guru</a>
-                        <a class="collapse-item" href="perizinan.html">Data perizinan</a>
+                        <a class="collapse-item" href="/biodata/">Data Guru</a>
+                        <a class="collapse-item" href="perizinan.html">Data Perizinan</a>
+                        <a class="collapse-item" href="/presensi/">Data Presensi</a>
                         <a class="collapse-item" href="absensi.html">Data Absensi</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Pilihan Lainnya :</h6>
-                        <a class="collapse-item" href="laporan.html">Laporan</a>
+                        <a class="collapse-item" href="laporan.html">Cetak Laporan</a>
                     </div>
                 </div>
             </li>
