--- a/absensi/templates/base.html
+++ b/absensi/templates/base.html
@@ -73,7 +73,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Pilihan :</h6>
                         <a class="collapse-item" href="/biodata/">Data Guru</a>
-                        <a class="collapse-item" href="perizinan.html">Data Perizinan</a>
+                        <a class="collapse-item" href="/perizinan/">Data Perizinan</a>
                         <a class="collapse-item" href="/presensi/">Data Presensi</a>
                         <a class="collapse-item" href="absensi.html">Data Absensi</a>
                         <div class="collapse-divider"></div>
