penambahan pada absensi

--- a/absensi/templates/Perizinan/data_izin.html
+++ b/absensi/templates/Perizinan/data_izin.html
@@ -17,7 +17,7 @@
             {% endif %}
         {% endfor %}   
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Tabble Perizinan</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Table Perizinan</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
