--- a/absensi/templates/base.html
+++ b/absensi/templates/base.html
@@ -75,7 +75,7 @@
                         <a class="collapse-item" href="/biodata/">Data Guru</a>
                         <a class="collapse-item" href="/perizinan/">Data Perizinan</a>
                         <a class="collapse-item" href="/presensi/">Data Presensi</a>
-                        <a class="collapse-item" href="absensi.html">Data Absensi</a>
+                        <a class="collapse-item" href="/absensi/">Data Absensi</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Pilihan Lainnya :</h6>
                         <a class="collapse-item" href="laporan.html">Cetak Laporan</a>
