--- a/absensi/templates/Absensi/data_absensi.html
+++ b/absensi/templates/Absensi/data_absensi.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content%}
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Data Perizinan</h1>
-        <a href="/tambahpresensi/" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+        <h1 class="h3 mb-0 text-gray-800">Data Absensi</h1>
+        <a href="/tambahabsensi/" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                 class="fas fa-download fa-sm text-white-50"></i> Tambah Data </a>
     </div>
     <div class="card shadow mb-4">
