--- a/absensi/templates/Biodata/data_bd.html
+++ b/absensi/templates/Biodata/data_bd.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content%}
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Biodata Guru</h1>
+        <h1 class="h3 mb-0 text-gray-800">Data Biodata Guru</h1>
         <a href="/tambahbd/" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                 class="fas fa-download fa-sm text-white-50"></i> Tambah Data </a>
     </div>
