Membuat relasi data antar tabel

--- a/absensi/templates/Perizinan/data_izin.html
+++ b/absensi/templates/Perizinan/data_izin.html
@@ -44,7 +44,7 @@
                         {% for Perizinan in perizinan  %}
                         <tr>
                             <td>{{ Perizinan.id }}</td>
-                            <td>{{ Perizinan.nama }}</td>
+                            <td>{{ Perizinan.nama.nama }}</td>
                             <td>{{ Perizinan.keterangan }}</td>
                             <td>{{ Perizinan.tgl }}</td>
                             <td style="display: flex;">
