--- a/absensi/templates/Absensi/data_absensi.html
+++ b/absensi/templates/Absensi/data_absensi.html
@@ -28,6 +28,7 @@
                             <th>Nama</th>
                             <th>Waktu/Tanggal</th>
                             <th>Status</th>
+                            <th>Aksi</th>
                         </tr>
                     </thead>
                     <tfoot>
@@ -36,6 +37,7 @@
                             <th>Nama</th>
                             <th>Waktu/Tanggal</th>
                             <th>Status</th>
+                            <th>Aksi</th>
                         </tr>
                     </tfoot>
                     <tbody>
@@ -45,6 +47,30 @@
                             <td>{{ Absen.nama.nama }}</td>
                             <td>{{ Absen.tgl }}</td>
                             <td>{{ Absen.status }}</td>
+                            <center>
+                                <td>
+                                    <button data-toggle="modal" data-target="#hapus{{ Absen.id }}" class="btn btn-danger btn-circle btn-sm">
+                                        <i class="fas fa-trash"></i>
+                                    </button>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="hapus{{ Absen.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h1 class="modal-title fs-5" id="exampleModalLabel">Yakin akan dihapus?</h1>
+                                            </div>
+                                            <div class="modal-body">
+                                            Perizinan Guru : {{ Absen.nama }}
+                                            </div>
+                                            <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Batal</button>
+                                            <a href="{% url 'hapus_absensi' Absen.id %}" class="btn btn-danger">Yakin</a>
+                                            </div>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </td>
+                            </center>
                         </tr>
                         {% endfor %}
                     </tbody>
